--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,6 +6,9 @@
         <div>
             <h1><a href="/">Django Girls Blog</a></h1>
         </div>
+		<div>
+			<h2>We are all family</h2>
+		</div>
 		{% for post in posts %}
 			<div>
 				<p>publish date:{{post.published_date}}</p>
