--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -13,17 +13,21 @@
         <div class="page-header">
             <h1><a href="/">Django Girls Blog</a></h1>
         </div>
-		<div class="content">
-			<div>
-				<h2><a href="">We are all family</a></h2>
-			</div>
-			{% for post in posts %}
-				<div class="post">
-					<p>publish date:{{post.published_date}}</p>
-					<h2><a href=/>{{post.title}}</h2>
-					<p>{{post.content|linebreaksbr}}</p>
+		<div class="content container">
+			<div class="row">
+				<div class="col-md-8">
+					<div>
+						<h2><a href="">We are all family</a></h2>
+					</div>
+					{% for post in posts %}
+						<div class="post">
+							<p>publish date:{{post.published_date}}</p>
+							<h2><a href=/>{{post.title}}</h2>
+							<p>{{post.content|linebreaksbr}}</p>
+						</div>
+					{% endfor %}
 				</div>
-			{% endfor %}
+			</div>
 		</div>
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
