--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,8 +10,12 @@
 		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC" rel="stylesheet" type="text/css">
     </head>
     <body>
+
      	<div class="page-header">
-			 <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+
+		<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+
+		<a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
 			<h1><a href="/">Django Girls Blog</a></h1>
 		</div>
 		<div class="content container">
