--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,7 +6,10 @@
             <div class="date">
                 {{ post.published_date }}
             </div>
-        {% endif %}
+		{% else %}
+			<a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
+		{% endif %}
+
         <h2>{{ post.title }}</h2>
         <p>{{ post.text|linebreaksbr }}</p>
     </div>
