--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -1,17 +1,19 @@
+
 {% extends 'blog/base.html' %}
 
 {% block content %}
+
     {% for post in posts %}
         <div class="post">
-            <div class="date">
-                Published:{{ post.published_date  }}
-            </div>
-			<div>
-				Author:{{ post.author }}
-			</div>
+            <p class="date">created:{{post.created_date|date:'d-m-Y'}}</p>
+
             <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-            <p>{{ post.text|linebreaksbr }}</p>
-			
+			<p>{{ post.text|truncatechars:200 }}</p>
+
         </div>
     {% endfor %}
+
+
 {% endblock %}
+
+
