--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -8,14 +8,25 @@
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 		<link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC" rel="stylesheet" type="text/css">
+		
+
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		
+		
+		<link rel="stylesheet" type="text/css" href="blog.css">
+<!------ Include the above in your HEAD tag ---------->
     </head>
     <body>
 
      	<div class="page-header">
-
-		<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-
-		<a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+			{% if user.is_authenticated %}
+				<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+				<a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+				<p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+			{% else %}
+				<a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
+			{% endif %}
 			<h1><a href="/">Django Girls Blog</a></h1>
 		</div>
 		<div class="content container">
