--- a/blog/templates/blog/add_comment_to_post.html
+++ b/blog/templates/blog/add_comment_to_post.html
@@ -1,11 +1,9 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-
-    <h2>New post</h2>
+    <h1>New comment</h1>
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="save btn btn-success">Save</button>
+        <button type="submit" class="save btn btn-info">Send</button>
     </form>
-	
 {% endblock %}
