--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,5 +1,5 @@
 .page-header {
-    background-color: #C25100;
+    background-color: #87CEEB;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
@@ -12,6 +12,7 @@
 
 .content {
     margin-left: 40px;
+    margin-right:40px;
 }
 
 h1, h2, h3, h4 {
@@ -49,6 +50,3 @@ h1, h2, h3, h4 {
 .comment {
     margin: 20px 0px 20px 20px;
 }
-
-
-
