--- a/blog/static/css/lesson8_array_guessNumber.css
+++ b/blog/static/css/lesson8_array_guessNumber.css
@@ -56,9 +56,7 @@ input:focus {
     font-size: 1.2em;
     /* font-weight: bold; */
 }
-.input_demo1 {
-    display: none;
-}
+
 #submit {
     font-size: 1.2em;
     width: auto;
@@ -127,7 +125,10 @@ th, td {
     width: 100%;
     margin: auto;
   
-}
+  }
+  .column {
+    width: 100%;
+  }
   .banner {
       height: 250px; 
   }
@@ -135,3 +136,12 @@ th, td {
       position: relative;
       top: 50px;
   }
+  .input_text {
+    width:30px;
+    height:30px;
+    margin: 0px 0px;
+    font-size: 1.3em;
+    text-align: center;
+
+
+}
