--- a/blog/templates/blog/lesson8_array_guessNumber.html
+++ b/blog/templates/blog/lesson8_array_guessNumber.html
@@ -23,11 +23,14 @@
         <div class="playground">
             <div class="column left_div">
                 <div class="left_top_div" id="left_top_div">
-                    <h2>請輸入 4 個數字(不可有空格)：</h2>
-                    <h3>(數字0~9皆可)</h3>
-                    <h3>你有10次猜題機會！</h3>
+                    <h2>請輸入 4 個數字</h2>
+                    <p>遊戲規則：<br>
+                        1.不可有空格，數字0~9皆可<br>
+                        2.有10次猜題機會！<br> 
+                        3.位置正確且數字正確以A表示 <br>
+                        4.位置錯誤但數字正確以B表示 <br>
+                        5.記錄請看下面表格</p>
 
-                    <br>
                     <div class="input_demo2" id="input_demo2">
                         <form>
                             <input id="input_text0" class="input_text" type="text" maxlength="1">
