--- a/blog/static/css/lesson8_array_guessNumber.css
+++ b/blog/static/css/lesson8_array_guessNumber.css
@@ -7,7 +7,7 @@ main {
     width: 100%;
     height: 600px;
     text-align: center;
-    background: url("https://picsum.photos/id/177/1000/500");
+    background: url("https://picsum.photos/id/177/1000/600");
     background-size: cover;
     /* opacity: 1; */
 }
@@ -31,18 +31,22 @@ input:focus {
     background: #e5e6e8;
 }
 .column {
-    width: 50%;
-    height: auto;
+    width: 45%;
+    /* height: auto; */
     /* border: 1px burlywood solid; */
-    padding: 10px;
+    /* padding: 10px; */
+    /* text-align: center; */
+    padding-left: 20px
 }
 .left_div {
+
     float: left;
-    padding: 20px 20px;
+    /* padding: 20px 20px; */
 }
 .right_div {
     float: left;
-    padding: 20px 20px;
+    /* padding: 20px 20px; */
+    /* text-align: center; */
 }
 .banner h1 {
     border: ;
@@ -54,19 +58,21 @@ input:focus {
 }
 .banner button {
     font-size: 1.2em;
+    border-radius: 10px;
     /* font-weight: bold; */
 }
 
 #submit {
-    font-size: 1.2em;
-    width: auto;
-    border-radius: 10px;
+
 }
 .right_answer {
     font-size: 1.1em;
 }
-#playAgain button {
+#playAgain button, #input_demo2 button {
     font-size: 1em;
+    font-size: 1.2em;
+    width: auto;
+    border-radius: 10px;
 }
 /* .input_num {
     width:40px;
@@ -128,7 +134,9 @@ th, td {
   }
   .column {
     width: 100%;
+    padding-left: 5px;
   }
+
   .banner {
       height: 250px; 
   }
@@ -142,6 +150,4 @@ th, td {
     margin: 0px 0px;
     font-size: 1.3em;
     text-align: center;
-
-
 }
